--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -2,9 +2,7 @@
 - name: Install common system packages
   pacman: name={{ item }} state=present
   with_items:
+  - base-devel
   - archey3
   - cronie
   - git
-  - autoconf
-  - make
-  - gcc
