--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -2,7 +2,10 @@
 - name: Install common system packages
   pacman: name={{ item }} state=present
   with_items:
-  - base-devel
   - archey3
   - cronie
   - git
+  - autoconf
+  - automake
+  - make
+  - gcc
