--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Sync pacman repositories
+  pacman: update_cache=yes
+
 - name: Install common system packages
   pacman: name={{ item }} state=present
   with_items:
