--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -23,8 +23,8 @@
   template: src={{ item }}.j2 dest=/usr/local/etc/{{ item }}
   with_items:
   - bash.bashrc
-  - bash_aliases.sh
-  - bash_colours.sh
+  - bash_aliases.bash
+  - bash_colours.bash
 
 - name: Enable bash.bashrc
   lineinfile: dest=/etc/bash.bashrc line="[ -f /usr/local/etc/bash.bashrc ] && . /usr/local/etc/bash.bashrc" state=present
