--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -13,6 +13,9 @@
   - git
   - make
 
+- name: Install pacman -Sy to cron
+  cron: name="Update pacman repositories" job="pacman -Sy" hour=0 state=present
+
 - name: Install command-not-found hook
   pacman: name=pkgfile state=present
   notify:
