--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -1,7 +1,4 @@
 ---
-- name: Sync pacman repositories
-  pacman: update_cache=yes
-
 - name: Install common system packages
   pacman: name={{ item }} state=present
   with_items:
@@ -12,6 +9,7 @@
   - gcc
   - git
   - make
+  - wget
 
 - name: Install pacman -Sy to cron
   cron: name="Update pacman repositories" job="pacman -Sy" hour=0 state=present
