--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -33,5 +33,8 @@
   - bash_aliases.bash
   - bash_colours.bash
 
+- name: Install fstab
+  template: src=fstab.j2 dest=/etc/fstab
+
 - name: Enable bash.bashrc
   lineinfile: dest=/etc/bash.bashrc line="[ -f /usr/local/etc/bash.bashrc ] && . /usr/local/etc/bash.bashrc" state=present
