Rework locale setup

--- a/roles/arch-common/handlers/main.yml
+++ b/roles/arch-common/handlers/main.yml
@@ -5,5 +5,8 @@
 - name: install pkgfile cron
   cron: name="Update pkgfile database" job="pkgfile -u" hour=1 state=present
 
+- name: regenerate locales
+  command: locale-gen
+
 - name: set locale
   template: src=locale.conf.j2 dest=/etc/locale.conf
