--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -2,8 +2,8 @@
 - name: Generate locales
   lineinfile: dest=/etc/locale.gen line={{ item }} state=present
   with_items:
-  - 'en_GB.UTF-8 UTF-8'
-  - 'en_US.UTF-8 UTF-8'
+  - "en_GB.UTF-8 UTF-8"
+  - "en_US.UTF-8 UTF-8"
   notify:
   - regenerate locales
   - set locale
