--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 - name: Generate locales
-  lineinfile: dest=/etc/locale.gen line={{ item }} state=present
+  lineinfile: dest=/etc/locale.gen line="{{ item }}" state=present
   with_items:
-  - "en_GB.UTF-8 UTF-8"
-  - "en_US.UTF-8 UTF-8"
+  - en_GB.UTF-8 UTF-8
+  - en_US.UTF-8 UTF-8
   notify:
   - regenerate locales
   - set locale
