--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -28,6 +28,7 @@
 
 - name: Configure multi-user boot target
   command: systemctl set-default -f multi-user.target
+    creates=/etc/systemd/system/default.target
 
 - name: Install pacman -Sy to cron
   cron: name="Update pacman repositories" job="pacman -Sy" minute=0 state=present
