--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -55,6 +55,8 @@
 
 - name: Install fstab
   template: src=fstab.j2 dest=/etc/fstab
+  notify:
+  - mount /boot
 
 - name: Enable bash.bashrc
   lineinfile:
