--- a/roles/arch-common/handlers/main.yml
+++ b/roles/arch-common/handlers/main.yml
@@ -12,4 +12,4 @@
   template: src=locale.conf.j2 dest=/etc/locale.conf
 
 - name: mount /boot
-  mount: name=/boot src=/dev/mmcblk0p1 fstype=vfat state=mounted
+  command: mount /boot
