Configure uEnv.txt

--- a/roles/banana-pi/tasks/main.yml
+++ b/roles/banana-pi/tasks/main.yml
@@ -3,3 +3,6 @@
   template: src=fstab.j2 dest=/etc/fstab
   notify:
   - mount /boot
+
+- name: Install uEnv.txt
+  template: src=uEnv.txt.j2 dest=/boot/uEnv.txt
