Fix /boot mounting

--- a/roles/banana-pi/tasks/main.yml
+++ b/roles/banana-pi/tasks/main.yml
@@ -1,9 +1,10 @@
 ---
 - name: Install fstab
   template: src=fstab.j2 dest=/etc/fstab
-  notify:
-  - mount /boot
-  meta: flush_handlers
+
+- name: mount /boot
+  command: mount /boot 2> /dev/null || true
+    creates=/boot/uEnv.txt
 
 - name: Install uEnv.txt
   template: src=uEnv.txt.j2 dest=/boot/uEnv.txt
